--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -643,7 +643,7 @@ body {
                     } else if (j == infos.record_spike_out_info.spike_count_avgs.length - 1) {
                       td_id.innerText = "out";
                     } else {
-                      td_id.innerText = "later_"+j;
+                      td_id.innerText = "layer_"+j;
                     }
                     table_line.appendChild(td_id);
 
