change for data and model page

--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -428,7 +428,9 @@ function sample_img_click(e){
                     },
                     fontFamily: 'Helvetica',
                     fontSize: '12px',
-                  }
+                  },
+                  nameLocation: 'center',
+                  nameGap: 30
             },
             yAxis: [
                 {
