add legend for model change, change for convert page

--- a/src/resources/model_simulate_page_v2.html
+++ b/src/resources/model_simulate_page_v2.html
@@ -784,8 +784,8 @@ body {
                         }
                     },
                     min: 0,
-                    max: cls_counts,
-                    splitNumber:(cls_counts + 1)
+                    max: (cls_counts - 1),
+                    splitNumber:cls_counts
                 },
                 series: [{
                     symbolSize: 5,
