change for snn model page

--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -25,9 +25,27 @@
     <span style="color: #333;height: 50px;width: 120px;margin-left: calc(50vw - 20px);margin-top: -70px;display: block;"><font style="color: #333;font-weight: bolder;">数据信息加载中...</font></span>
   </div>
 
+    <div style="height: 500px;margin-top: -5px;">
+      <div style="height: 460px;width: 740px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
+        <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+          font-size: 20px;
+          color: #333333;
+          letter-spacing: 1.14px;">模型连接图</font></div>
+        <div id="sangky_chart" style="width: 700px;height: 400px;display: inline-block;margin-left: 50px;overflow: auto;"></div>
+      </div>
+      <!--权重分布图-->
+      <div style="height: 460px;width: 770px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
+          <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
+            font-size: 20px;
+            color: #333333;
+            letter-spacing: 1.14px;">脉冲神经网络权重分布</font></div>
+          <div id="weight_dist_chart" style="width: 700px;height: 400px;margin-left: 40px;margin-top: 40px;"></div>
+      </div>
+    </div>
+
     <div style="height: 400px;">
         <!-- SNN神经元信息 -->
-        <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 770px;">
+        <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 740px;">
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
               font-size: 20px;
               color: #333333;
@@ -99,28 +117,10 @@
                     font-size: 16px;
                     color: #666666;padding-top: 12px; padding-bottom: 12px;">平均连接个数</td>
                   </tr>
-                  <!-- 动态加载 -->
+                   动态加载 -->
                 </thead>
             </table>
-        </div> -->
-    </div>
-    <div style="height: 500px;margin-top: -5px;">
-        <!--权重分布图-->
-        <div style="height: 460px;width: 770px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
-            <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
-              font-size: 20px;
-              color: #333333;
-              letter-spacing: 1.14px;">脉冲神经网络权重分布</font></div>
-            <div id="weight_dist_chart" style="width: 700px;height: 400px;margin-left: 40px;margin-top: 10px;"></div>
-        </div>
-        <div style="height: 460px;width: 740px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
-            <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
-              font-size: 20px;
-              color: #333333;
-              letter-spacing: 1.14px;">模型连接图</font></div>
-            <div id="sangky_chart" style="width: 700px;height: 400px;display: inline-block;margin-left: 20px;"></div>
-        </div>
-    </div>
+      </div>
 </body>
 <style>
 
@@ -201,6 +201,10 @@ body {
 }
 .container:last-child::after {
   content: 'large';
+}
+#sangky_chart svg {
+  width: 140%;
+  height: 140%;
 }
 </style>
 <!-- Compiled and minified CSS -->
@@ -455,6 +459,8 @@ const vscode = acquireVsCodeApi();
 
                   let prev_rect = undefined;
                   let idx4layer = 0;
+                  let k_pos = 0;
+                  let extra_idx = -1;
                   for (let k = 0; k < origin_layer_names.length; ++k) {
                     var layer_idx = "layer_"+idx4layer;
                     if (k === 0) {
@@ -463,7 +469,7 @@ const vscode = acquireVsCodeApi();
                       layer_idx = "out";
                     }
                     var rect = new joint.shapes.standard.Rectangle();
-                    rect.position(200, 40 * k + 20);
+                    rect.position(200, 40 * k_pos + 20);
                     rect.resize(300, 20);
                     rect.attr({
                         body: {
@@ -493,6 +499,32 @@ const vscode = acquireVsCodeApi();
                       link.addTo(graph);
                     }
                     prev_rect = rect;
+                    if (origin_layer_names[k] === "Conv2D") {
+                      extra_idx++;
+                        if (infos.layer_extras[k] === "relu") {
+                          k_pos++;
+                          var rect_extra = new joint.shapes.standard.Rectangle();
+                          rect_extra.position(200, 40 * k_pos + 20);
+                          rect_extra.resize(300, 20);
+                          rect_extra.attr({
+                            body: {
+                              fill: "red"
+                            },
+                            label: {
+                              text: "Activation",
+                              fill: 'white'
+                            }
+                          });
+                          rect_extra.addTo(graph);
+                          var link_extra = new joint.shapes.standard.Link();
+                          link_extra.source(prev_rect);
+                          link_extra.target(rect_extra);
+                          link_extra.addTo(graph);
+
+                          prev_rect = rect_extra;
+                      }
+                    }
+                    k_pos++;
                   }
 
                   $(".loading-div").hide(); // 隐藏加载提示
@@ -554,6 +586,8 @@ const vscode = acquireVsCodeApi();
                       type: 'category',
                       data: flt_label_names,
                       name:"浮点权重",
+                      nameLocation: 'center',
+                      nameGap : 30,
                       nameTextStyle:{
                         color:"#999999",
                         fontFamily: 'SourceHanSansCN-Normal',
@@ -566,12 +600,15 @@ const vscode = acquireVsCodeApi();
                         fontFamily: 'SourceHanSansCN-Normal',
                         fontSize: '14px',
                     },
-                    show:false
+                    show:true,
+                    position: 'top'
                   },
                   {
                       type: 'category',
                       data: label_names,
                       name:"权重",
+                      nameLocation: 'center',
+                      nameGap: 30,
                       nameTextStyle:{
                         color:"#999999",
                         fontFamily: 'SourceHanSansCN-Normal',
@@ -593,6 +630,8 @@ const vscode = acquireVsCodeApi();
                     min: 1,
                     logBase: 2,
                     name:"浮点权重数量",
+                    nameLocation: 'center',
+                    nameGap: 40,
                     nameTextStyle:{
                       color:"#999999",
                       fontFamily: 'SourceHanSansCN-Normal',
@@ -614,6 +653,8 @@ const vscode = acquireVsCodeApi();
                     min: 1,
                     logBase: 10,
                     name:"定点权重数量",
+                    nameLocation: 'center',
+                    nameGap: 40,
                     nameTextStyle:{
                       color:"#999999",
                       fontFamily: 'SourceHanSansCN-Normal',
